--- a/VRChat/65/984765.html
+++ b/VRChat/65/984765.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "V/1oZMgqTUjsn8n5zA23/2XjVOMOnwPLuwagRcYn3xg="></script>
+    "13VnAkdwuaUmE+oy5pCNs6BShWe8o9tzxhgrfWtQFkc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お布団","description":"お布団です。boothお試しで無料配布します。\nなんにでも活用してもらって大丈夫です。\n三角面724\nマテリアル数2\nfbxです。\n好きな子を寝かせてあげたり、自身が布団となってVRCHATで遊んだりとなんにでもお使いください。\n※このモデルを使用して発生したトラブル、損害等には作者は一切の責任を持ちません。ご了承ください。\n","url":"https://booth.pm/ja/items/984765","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f705da9e-26cc-49c8-8814-d2354078c930/i/984765/e43dad5d-ea9f-4886-a59a-8cb9f1dc89bf_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V/1oZMgqTUjsn8n5zA23/2XjVOMOnwPLuwagRcYn3xg="></script>
+    nonce="13VnAkdwuaUmE+oy5pCNs6BShWe8o9tzxhgrfWtQFkc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/984765/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/984765/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
