--- a/VRChat/56/984656.html
+++ b/VRChat/56/984656.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YvSRsAfctVwX6Oz7yOzXPTGSRahSLRv+9f02UMAGLx4="></script>
+    "cnov6JyzpSWEHe9XA4DpoWhkPcaeY5506GwqPldAS+E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"18式多機能通信機","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n\n【説明】\n多機能通信機っぽいもの。\nスキャンっぽいレーザーのパーティクルと炎のパーティクルと投影っぽいパーティクル等が組み込んであります。\n\n三角面:555\n\nアップデート内容:パーティクル等の追加及び、テクスチャの追加\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/984656","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/8af5d090-df4c-4849-965f-b38941abdc0c/i/984656/7e9b87fb-cd28-49ed-b6a5-d860c0520566_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YvSRsAfctVwX6Oz7yOzXPTGSRahSLRv+9f02UMAGLx4="></script>
+    nonce="cnov6JyzpSWEHe9XA4DpoWhkPcaeY5506GwqPldAS+E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/984656/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               189
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/984656/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               189
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
