--- a/VRChat/76/984176.html
+++ b/VRChat/76/984176.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YxamtchxS4xrVLOkQN2pKR0ffbwbLC/PCQpO3IBfI+Q="></script>
+    "Gt9RWAQOXGC/nifr+4ImumaypjbeiuIDN06lQ+cRTJ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　みここ饅頭（バーチャルのじゃロリ狐娘youtuberおじさん）","description":"VRchat向けアクセサリ：みここ饅頭\n\nポリゴン数1436のFBXファイルと\n上記のテクスチャが入っております\n\n商用利用・私的利用に対してご自由にお使いください\n再配布はお止めください\n\nねこみみマスター様（ねこます様）より許可をいただいて配布させていただいております、ご迷惑のかからないように使用ください。","url":"https://booth.pm/ja/items/984176","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/984176/cd1e9a24-a477-4b81-b87d-2ba48bbfce3b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YxamtchxS4xrVLOkQN2pKR0ffbwbLC/PCQpO3IBfI+Q="></script>
+    nonce="Gt9RWAQOXGC/nifr+4ImumaypjbeiuIDN06lQ+cRTJ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/984176/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               246
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/984176/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               246
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
