updated at: 2023-04-25 20:37, 「JAPANELAND 花火大会」VIRTUALに咲いた一夜の夢 - てのひともじ - BOOTH

--- a/VRChat/73/983973.html
+++ b/VRChat/73/983973.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "I/VZukBn2OsVpOXiV7IF5765Zsdw4ZSsMQINJMlSAv4="></script>
+    "Fb91wazIaNjDypAOanjLvE60KoITxrsqsEhdVMhNYcU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「JAPANELAND 花火大会」VIRTUALに咲いた一夜の夢","description":"形式：PDF \nページ数： 21\n文字数：約4千5百文字\n\nVRChatで開催したイベント「JAPANELAND　花火大会」を開催\nしてみて感じた事などをまとめました。\n\n2018年8月11日(土)に主催としてVRChatにて開催したイベント\n「JAPANELAND 花火大会」を準備段階から振り返ってみた内容\nになっています。\n記録と言うには時系列に沿って書いていませんし、ノウハウ\n本としては一般に知られている内容の方が多いですし、読み物\nとしては内容が薄いかと思いますが「こんなことをしていた\nんだ」程度に楽しんでいただければと思います。\n\nイベントから時間も経っていますし、文章として起こすのに\n内容を正確に振り返る為に下書き時に調べものなどもしている\nので、マッハ新書ではありませんが、ApplePagesを利用したり\n清書は６時間程で書き上げたりマッハ新書を参考にさせて\n貰ってます。\n\n誤字脱字内容に問題があった場合はお手数ですが@Tnohito1\nまでお知らせください。\n","url":"https://booth.pm/ja/items/983973","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ff773656-1882-483b-bf64-a295384afba7/i/983973/09d4c03f-4e85-41e7-a9e4-a7f37525b219_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I/VZukBn2OsVpOXiV7IF5765Zsdw4ZSsMQINJMlSAv4="></script>
+    nonce="Fb91wazIaNjDypAOanjLvE60KoITxrsqsEhdVMhNYcU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/983973/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/983973/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
