--- a/VRChat/08/983108.html
+++ b/VRChat/08/983108.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4IG+BYda/1EV+E6BjQsAmEH4oGWfydFJFLndjFt4K0o="></script>
+    "sgfkgwc1KT7fVQWg1XlDJZX+Sk0mvdunhjRjRvBoiUg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シャインライフル","description":"■シャインライフル（Shine Rifle）ver 1.00\n\nAuthor 努武衛門(domuemon)\n\n――――――――――\n\n■モデル概要\n　　　1 mesh\n　　　620 tris\n　　　1 Materials\n　　　5 Textures (4096*4096)\n\n\tカラーバリエーション9色入り\n\n\n　・改造、改変自由です。\n　・VRChatでの使用自由です。\n　・動画等への使用自由です。\n――――――――――\n\n■禁止事項\n　・公序良俗に反する行為、反社会的、政治的、宗教を含む行為への使用。\n　・他人を誹謗中傷する目的での使用。\n　・他人への迷惑行為を伴う使用。\n　・自作発言。\n　・改造、未改造関わらず本人以外が自由に取り扱える状態での再配布、販売は禁止です。\n　・VRChatでの使用は自由ですがペデスタル等を使って本人以外が使用できるようにすることは禁止です。\n\n――――――――――\n\n※このモデルを使用して発生したトラブル、損害等に作者は一切の責任を持ちません。\n　自己責任でご使用下さい。\n※著作権は放棄していません。\n\nメール\tdomudomu.emon@gmail.com\ntwitter　Vdomuemon","url":"https://booth.pm/ja/items/983108","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/94505b00-fd01-42de-9cd2-c4f8cb4a3cf0/i/983108/f981ae31-7346-439a-b2c4-174b6d60d3dc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4IG+BYda/1EV+E6BjQsAmEH4oGWfydFJFLndjFt4K0o="></script>
+    nonce="sgfkgwc1KT7fVQWg1XlDJZX+Sk0mvdunhjRjRvBoiUg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/983108/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/983108/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
