--- a/VRChat/28/982628.html
+++ b/VRChat/28/982628.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "V+ElMHiF4ZpTT/QWggJrLIgKKbf0Rs6A1stwwaXE4E4="></script>
+    "+RClLBxdHCNm3/Pz5uZq5keQQzbdq5E4juEAK8zHKIM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"超フルスクラッチメロンパン_2018","description":"見た目は納得出来ましたが、中のパン生地と味に納得いきませんので、今後もバージョンアップする可能性があります。\n今後は通常版のみマイナーバージョンアップを含む予定です。","url":"https://booth.pm/ja/items/982628","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/982628/5f5af572-d5a5-4a1a-b533-24017ca33ab8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V+ElMHiF4ZpTT/QWggJrLIgKKbf0Rs6A1stwwaXE4E4="></script>
+    nonce="+RClLBxdHCNm3/Pz5uZq5keQQzbdq5E4juEAK8zHKIM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/982628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/982628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
