--- a/VRChat/00/982500.html
+++ b/VRChat/00/982500.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "I++pUnXoTiwc/nUsAs2AUfKOMtXNfb26sM2b8I7BxlE="></script>
+    "b7XGEg4KyyQoZP6LIgAfDa5vf3W7maVopPfnQg8dgtw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"七支刀【VRChat対応】","description":"フルスクラッチの七支刀です\n片手で持つのにちょうどいいサイズです\nマテリアルをいじることで色を変えられます\n\nポリゴン数：854△\nVRChatでの使用を想定しています","url":"https://booth.pm/ja/items/982500","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/982500/c6c24102-3beb-4e74-bcad-9f0254f2ba31_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I++pUnXoTiwc/nUsAs2AUfKOMtXNfb26sM2b8I7BxlE="></script>
+    nonce="b7XGEg4KyyQoZP6LIgAfDa5vf3W7maVopPfnQg8dgtw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/982500/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/982500/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
