--- a/VRChat/24/982424.html
+++ b/VRChat/24/982424.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kOoQG2k9JrKskZgoJwuXIVZ6cO68U2NACIzkmM+VJBk="></script>
+    "nfV/utpJaXOnvhO+E41D0GMhrijQxrGxh3uZ75QaVGE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ダンボール.fbx","description":"何の変哲もない\"ダンボール\"の3Dモデルです。\n\"のぞき穴\"もとい\"取っ手\"がついています。\nポリゴン数は\"30\"です。\n\"VRChat\"での使用を想定しています。\n\n内容物\n・dan-ball.fbx\n・dan-ball_texture.png\n\n利用規約\n・改変及び商用利用可\n・クレジット表記不要\n・\"レッツエンジョイ\"","url":"https://booth.pm/ja/items/982424","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ea33e22f-60ae-45e3-aa88-dc076578c9a7/i/982424/1d57641c-7f89-4932-a9b5-03891042cd5f_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kOoQG2k9JrKskZgoJwuXIVZ6cO68U2NACIzkmM+VJBk="></script>
+    nonce="nfV/utpJaXOnvhO+E41D0GMhrijQxrGxh3uZ75QaVGE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/982424/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/982424/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
