--- a/VRChat/94/982194.html
+++ b/VRChat/94/982194.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YkGj/pkZWWioCMNxa2nLcd06KC7SJYR55EbhWqDFmDQ="></script>
+    "AfD+qEjXCZJ/ZkHIt53o2qT7FOVgHKOU5Blqs3+J8QE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"すやすやVRすいみんアイマスク","description":"＊モデル説明＊ \nかわいいアイマスクを2種類つくりました！\nVR睡眠をしている方に向けたVRChat用アクセサリーとなります。\nアイマスクをアバターが付けていることによって、睡眠中かどうか区別が付けやすくなります。\n（そして、睡眠中もかわいくおしゃれアピールできますよ！）\n\nすやすやにゃんにゃん、すやすやうさちゃん、お好みでご利用ください＊*\n\n＊内容物＊\nKawaii_eyemasks.fbx\nモデルデータが入っています。\n\nTexture.png\nテクスチャとなります。\n\n ＊利用規約＊ \n本モデルを購入した時点で本利用規約に同意したものとします。利用規約の内容は変更する場合があり、最新のものが適用されます。 本データはVRChatでの利用を想定しております。VRChat以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。再配布、自作発言、名誉棄損・法律に反する使用はご遠慮ください。本データの著作権は作成者(姉と妹)が有します。 ","url":"https://booth.pm/ja/items/982194","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/ef40f496-b7db-4dc9-9e06-1127a645a568/i/982194/0fb32da1-0a12-4a08-9587-0fe4182a2dc3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YkGj/pkZWWioCMNxa2nLcd06KC7SJYR55EbhWqDFmDQ="></script>
+    nonce="AfD+qEjXCZJ/ZkHIt53o2qT7FOVgHKOU5Blqs3+J8QE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/982194/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               317
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/982194/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               317
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
