updated at: 2023-04-25 20:38, CRL-10＆おまけ素体 - JEFの倉庫 - BOOTH

--- a/VRChat/82/982182.html
+++ b/VRChat/82/982182.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Xrck/XIL8weUoJ5x74oZk/r9t9V0c1PJ8w/eUhjMJJ0="></script>
+    "nW05CIKKAovCz7cqN8jtNS+JJN/OVn3zptDGnxvcv3k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"CRL-10＆おまけ素体","description":"CRL-10\nVRchatでお使いいただけるモデルデータになります。\nフルトラッキング時、肩がかなり下がるのでキャリブレーションのコツが要りますがトラッカー無し、デスクトップでの使用では問題ありません\n\nおまけ\n新規に作成した「CRL-16」に内蔵されている素体である、「Cruxフレーム」を同梱いたします。「Cruxフレーム」には頭部と足先が附属しておりません。ご注意ください。","url":"https://booth.pm/ja/items/982182","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/ea95dbd8-fd5b-43a0-9a82-ee7157567ac9/i/982182/d3107dcb-3fbb-4c05-a5f1-05d865accbef_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Xrck/XIL8weUoJ5x74oZk/r9t9V0c1PJ8w/eUhjMJJ0="></script>
+    nonce="nW05CIKKAovCz7cqN8jtNS+JJN/OVn3zptDGnxvcv3k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/982182/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/982182/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
