updated at: 2023-04-25 20:40, fbxモデル 銃鞘刀「NLK-820G」 - Store*Snowlight - BOOTH

--- a/VRChat/68/980068.html
+++ b/VRChat/68/980068.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ant5yooi+aer44Iz5rxtQJ/A845CG8oCJD6E48dPvPY="></script>
+    "P14WDjHN/zWMXBvqiHZ1GMoQjv1save2a82SBwCStLY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"fbxモデル 銃鞘刀「NLK-820G」","description":"English explanation is at the bottom of this page.\n\n本製品は、fbx形式の3D武器モデルです。\nUnityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。","url":"https://booth.pm/ja/items/980068","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/980068/c2911e6b-4ee6-4e3e-9de8-62df156f27d5_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ant5yooi+aer44Iz5rxtQJ/A845CG8oCJD6E48dPvPY="></script>
+    nonce="P14WDjHN/zWMXBvqiHZ1GMoQjv1save2a82SBwCStLY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,10 +177,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/980068/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1682
+                              1685
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/980068/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1682
+                              1685
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
