updated at: 2023-04-25 20:40, 【VRchat向け】ボクセルチェーン - Auger Smycken -鬼の宝飾店- - BOOTH

--- a/VRChat/66/979866.html
+++ b/VRChat/66/979866.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qDDPfHllwxO4RUdkUO/8rPZRVBR61y03+Y3s9uQ2wcI="></script>
+    "KCz3cvtD3eej14R8L6fS+DIdK/UWOIY75t/DR/zqlfM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】ボクセルチェーン","description":"鎖です。\nボーンが入っていて曲がるので、小物を吊るしたりダイナミックボーンを入れて揺らしてください。","url":"https://booth.pm/ja/items/979866","offers":{"priceCurrency":"JPY","@type":"Offer","price":"108"},"image":"https://booth.pximg.net/c/620x620/df7a2c98-5600-4bd3-a760-8619dcc019d6/i/979866/fd1eee38-fe64-4df6-9c42-c7030a6a521d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qDDPfHllwxO4RUdkUO/8rPZRVBR61y03+Y3s9uQ2wcI="></script>
+    nonce="KCz3cvtD3eej14R8L6fS+DIdK/UWOIY75t/DR/zqlfM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/979866/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/979866/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
