updated at: 2023-04-25 20:40, 四つ葉の帯飾り - CaTrusty - BOOTH

--- a/VRChat/06/976706.html
+++ b/VRChat/06/976706.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xXFM1JnD1966BUIKPgId/7ETwAGtJZKgPN5AsQDuWmQ="></script>
+    "aipZAsaCiD+hcvpatT9CtvE8lBQs2uewE6JVyQ9UCQg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"四つ葉の帯飾り","description":"自分用に作った和の入ったガラスモチーフの四つ葉飾りです。\nシンプルですが割とローポリなのでワンポイントにでもどうぞ。\n帯飾りとしていますが、挿す部分や紐がないバージョンも同梱しています。\n","url":"https://booth.pm/ja/items/976706","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/976706/f34576f8-0c26-46ce-b65e-96ee4939c011_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xXFM1JnD1966BUIKPgId/7ETwAGtJZKgPN5AsQDuWmQ="></script>
+    nonce="aipZAsaCiD+hcvpatT9CtvE8lBQs2uewE6JVyQ9UCQg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/976706/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/976706/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
