updated at: 2023-04-25 20:41, 調理器具セット - bisy`s shop - BOOTH

--- a/VRChat/23/974823.html
+++ b/VRChat/23/974823.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RdAPxiLa80YJbpOdrNgp+ZwXralJIH09jDv2Dv46kX8="></script>
+    "Tb7DVSZEEfdQB8cMEfDjWjboWd26cwZJqMAYNepcUSk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"調理器具セット","description":"調理器具セットです。\n中身は包丁・フライパン・お玉・まな板・ボウル・フライ返し・しゃもじ・泡だて器・絞り袋です。\n泡だて器だけ少しポリゴン数が多いです。\n\nblendファイル同梱\n改変はご自由にしていただいて大丈夫です。\n再配布のみ禁止。\n2018/8/22\nお鍋追加しました。","url":"https://booth.pm/ja/items/974823","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/974823/82c0f5f1-53df-4eba-b5bd-d39478c0bd21_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RdAPxiLa80YJbpOdrNgp+ZwXralJIH09jDv2Dv46kX8="></script>
+    nonce="Tb7DVSZEEfdQB8cMEfDjWjboWd26cwZJqMAYNepcUSk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/974823/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               493
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/974823/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               493
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
