updated at: 2023-04-25 20:41, 【VRC想定】抱き枕(北島デザイン・改変用デザイン)【アバター・アクセサリ両用】 - ショッピング北島 - BOOTH

--- a/VRChat/57/933357.html
+++ b/VRChat/57/933357.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CR9E/Q6UyElZNQBUdMBHCZGR+oCF667bG3z1huvhxGc="></script>
+    "coHX2XTDFgEsZj0zXTNzdv7co4Uix7JzGcxc58mdozo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC想定】抱き枕(北島デザイン・改変用デザイン)【アバター・アクセサリ両用】","description":"--2018/8/30更新しました。(Updated!)--\nReadMe!!!に、\n・ノーマルマップに関する記述\n・よくあるかもしれない質問\nを追加しました。\n！！！今までUnityパッケージとして配布していたものがUnityシーンファイルでした！！大変ご迷惑をおかけしました。！！！\n今回修正しました。ファイル名は同じですので、そちらからインポートしてください。\n----\n抱き枕(北島デザイン・改変用デザイン)\n\n北島(製作者のキャラクター)のデザインの抱き枕の3Dモデル(FBX)と、カスタムしやすいカバー用画像のセットです。\nまとめたものをUnityPackageにして同梱しています。\n3Dモデルは△480ポリゴンです。\n\n以下の文章はフォルダ内のRead Me!!!とほぼ同内容です。\n\nzipファイルとなっておりますので、ダウンロード後は各自で解凍をしてください。","url":"https://booth.pm/ja/items/933357","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/13868100-3507-4382-85a7-a21c6138b840/i/933357/8acfcc37-8a50-462b-be29-9fc78b3983c9_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CR9E/Q6UyElZNQBUdMBHCZGR+oCF667bG3z1huvhxGc="></script>
+    nonce="coHX2XTDFgEsZj0zXTNzdv7co4Uix7JzGcxc58mdozo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/933357/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/933357/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
